--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 Fuck all suckers full of conceit.
+<a href='https://ko-fi.com/A8803KY3' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
