--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ARIES - Free Bootstrap Theme by WowThemes.net</title>
+<title>Leon's personal website</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -31,7 +31,7 @@
 		<i class="fa fa-bars"></i>
 		</button>
 		<a class="navbar-brand page-scroll" href="index.html">
-		ARIES </a>
+		Leon </a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -60,7 +60,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">THIS IS ARIES</h1>
+				<h1 class="brand-heading">THIS IS LEON</h1>
 				<p class="intro-text">
 					FREE TEMPLATE BY WOWTHEMES.NET
 				</p>
