--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<i class="fa fa-bars"></i>
 		</button>
 		<a class="navbar-brand page-scroll" href="index.html">
-		Leon </a>
+		塑料机霸 </a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -62,7 +62,7 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">THIS IS LEON</h1>
 				<p class="intro-text">
-					FREE TEMPLATE BY WOWTHEMES.NET
+					LIFE IS TOO SHORT FOR SO MUCH SORROR.
 				</p>
 				<a href="#about" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
