--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">THIS IS LEON</h1>
 				<p class="intro-text">
-					LIFE IS TOO SHORT FOR SO MUCH SORROR.
+					LIFE IS TOO SHORT FOR SO MUCH SORROW.
 				</p>
 				<a href="#about" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
